# circuits-repl

./: .gitignore  CHANGELOG.md  LICENSE  cabal.project  circuits-repl.cabal  cursor.cabal  readme.md
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.14.1/: cursor-0.1.0.0-inplace.conf  package.cache
examples/: agent-bridge.hs  agent-repl-follower.hs  agent-repl-loop.hs  box-core.hs  cabal-repl-explore.hs  cabal-repl-muster.hs  cabal-repl-real.hs  cabal-repl-split.hs  cabal-repl.hs  dual-spike.hs  muster-local-agent.hs
src/: Cursor.hs
src/Circuit/: Comm.hs  Repl.hs  Session.hs
src/Circuit/Comm/: Framing.hs
src/Circuit/Repl/: Agent.hs  PingPong.hs  Turn.hs
test/: Main.hs  MockBackend.hs  ReplMain.hs
test/mock-repl/: Main.hs
