cabal-version: 3.0
name: cursor
version: 0.1.0.0
license: BSD-3-Clause
license-file: LICENSE
copyright: Tony Day (c) 2026
category: Data
author: Tony Day
maintainer: tonyday567@gmail.com
homepage: https://github.com/tonyday567/cursor
synopsis: Position in an append-only log — what is new since I last asked
description:
  A tiny abstraction over in-memory (IORef) and on-disk cursor storage.
  Both answer the same question: given an append-only log of lines, what
  is new since this reader last asked? Intended as a shared primitive for
  process harnesses (repl emit) and coordination buses (muster read).

build-type: Simple
tested-with: ghc ==9.14.1

library
  default-language: GHC2021
  ghc-options: -Wall
  hs-source-dirs: src
  exposed-modules: Cursor
  build-depends:
    base >=4.18 && <5,
    directory >=1.3 && <1.4,
    text >=2.0 && <3

test-suite cursor-test
  default-language: GHC2021
  type: exitcode-stdio-1.0
  ghc-options: -Wall
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    base >=4.18 && <5,
    cursor,
    directory >=1.3 && <1.4,
    filepath >=1.4 && <1.6,
    temporary >=1.3 && <1.5,
    text >=2.0 && <3
